src-errormsg/E01-ReturnListNotElement/Plutarch.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E01-ReturnListNotElement/Plutarch.hs:39:28: error: [GHC-18872]
    • Couldn't match type ‘PList PInteger’ with ‘PInteger’
        arising from a use of ‘plam’
    • In the second argument of ‘(#)’, namely
        ‘plam (\ acc n -> pcon (PCons (acc + n) (pcon PNil)))’
      In the first argument of ‘(#)’, namely
        ‘pfoldList # plam (\ acc n -> pcon (PCons (acc + n) (pcon PNil)))’
      In the expression:
        pfoldList # plam (\ acc n -> pcon (PCons (acc + n) (pcon PNil)))
          # 0
   |
39 | psumIntegers = pfoldList # plam (\acc n -> pcon (PCons (acc + n) (pcon PNil))) # 0
   |                            ^^^^
